feat: Stack Java Priority 1 - Fundamentals deep dive, Concurrency, Testing
Start Phase 3 of the interview track (Stack Java) with three foundational
notes, going deep on each topic.

Java Fundamentals: update to evergreen and expand significantly. JVM
section expanded from 8 lines to ~200 lines covering bytecode pipeline,
memory areas (Young/Old gen, Metaspace, Stack), Garbage Collection
algorithms comparison (G1, ZGC, Shenandoah, Parallel, Serial, Epsilon),
JIT tiered compilation (C1/C2, escape analysis, inlining), classloader
hierarchy and parent delegation. Exceptions section expanded to cover
checked vs unchecked debate, try-with-resources with suppressed
exceptions, anti-patterns catalog, lambdas and checked exceptions. Added
new Records section with compact constructors, methods, record patterns,
Spring Boot integration. Added Sealed Classes section with ADT patterns.
Added Pattern Matching section (instanceof, switch, primitive patterns).
Updated modern features through Java 22, 23, 24, and 25 LTS. Concurrency
section now references the dedicated Java Concurrency note.

Java Concurrency (new, ~1550 lines): deep dive deserving its own file.
Covers Platform Threads vs Virtual Threads, Java Memory Model with
happens-before relationships, volatile semantics, double-checked locking,
synchronized (methods/blocks/reentrance/wait-notify), ReentrantLock,
ReadWriteLock, StampedLock with optimistic reads, atomic classes
(AtomicInteger, LongAdder, AtomicStampedReference), concurrent collections
(ConcurrentHashMap, CopyOnWrite, BlockingQueue variants), ExecutorService
and ThreadPoolExecutor tuning, CompletableFuture composition (thenCompose,
allOf, exceptionally, orTimeout), synchronizers (CountDownLatch,
CyclicBarrier, Semaphore, Phaser, Exchanger), ForkJoinPool and parallel
streams, Virtual Threads with pinning diagnosis, Structured Concurrency
and Scoped Values (Java 25 final), classic bugs (race, deadlock, livelock,
starvation, visibility, unsafe publication), design 